remove number counter

--- a/neumorphic_calculator/style.css
+++ b/neumorphic_calculator/style.css
@@ -21,6 +21,11 @@ main {
 	border-radius: 30px;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+}
+
 input {
 	width: 100%;
 	height: 60px;
