--- a/neumorphic_calculator/style.css
+++ b/neumorphic_calculator/style.css
@@ -15,15 +15,18 @@ body {
 	justify-content: center;
 }
 
+h2 {
+	margin-bottom: 20px;
+	text-shadow: -3px -2px 2px #fff, 3px 3px 2px rgba(0, 0, 0, 0.4);
+	color: #e9e9e9;
+	font-size: 30px;
+	font-weight: 900;
+}
+
 main {
 	box-shadow: -8px -8px 9px #fff, 8px 8px 9px rgba(0, 0, 0, 0.4);
 	padding: 2rem;
 	border-radius: 30px;
-}
-
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-	-webkit-appearance: none;
 }
 
 input {
