--- a/rock_paper_scissor/rock-paper-scissors.css
+++ b/rock_paper_scissor/rock-paper-scissors.css
@@ -2,6 +2,10 @@ body {
 	background-color: rgba(0, 0, 0, 0.922);
 	font-family: "Courier New", Courier, monospace;
 	box-sizing: border-box;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .game-title {
