--- a/simple_dictionary/style.css
+++ b/simple_dictionary/style.css
@@ -50,3 +50,9 @@ button {
 button:active {
 	box-shadow: 4px 4px 9px rgba(0, 0, 0, 0.4) inset, -4px -4px 9px #494949 inset;
 }
+
+.error {
+	color: rgb(240, 248, 255, 70);
+	font-size: 23px;
+	margin-top: 2rem;
+}
