--- a/whereAmI/style.css
+++ b/whereAmI/style.css
@@ -2,11 +2,13 @@ body {
 	color: green;
 	background-color: aliceblue;
 	font-family: sans-serif;
+	box-sizing: border-box;
 }
 
 main {
-	margin-top: 50%;
-	transform: translateY(-50%);
+	margin-top: 10%;
+	margin-left: 50%;
+	transform: translate(-50%);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -23,26 +25,56 @@ main {
 }
 
 .teller {
-	padding: 1rem;
+	padding: 0 1rem;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 	background-color: rgba(0, 128, 0, 0.357);
-	font-weight: 700;
-	text-align: center;
-	width: 50%;
+	width: 80%;
 	border-radius: 10px;
 }
 
-button {
-	padding: 0.7rem;
-	margin: 1rem;
+.teller-col {
+	padding: 0 1rem 0 1rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+	background-color: rgba(0, 128, 0, 0.357);
+	width: 80%;
+	border-radius: 10px;
+}
+
+.teller p {
+	font-weight: 700;
+}
+
+.more-btn {
+	height: 50%;
+	padding: 0.5rem 0.7rem;
+	font-size: small;
+}
+
+.ask-btn,
+.more-btn {
 	background-color: rgba(0, 128, 0, 0.6);
 	color: aliceblue;
-	font-weight: 900;
-	font-size: larger;
 	border: none;
 	border-radius: 13px;
 	cursor: pointer;
 }
 
+.ask-btn {
+	padding: 0.7rem;
+	margin: 1rem;
+	font-weight: 900;
+	font-size: larger;
+}
+
 button:hover {
 	background-color: rgba(0, 128, 0, 0.5);
+}
+
+.hidden {
+	opacity: 0;
 }
