style error holder

--- a/whereAmI/style.css
+++ b/whereAmI/style.css
@@ -34,18 +34,15 @@ main {
 	border-radius: 10px;
 }
 
-.teller-col {
-	padding: 0 1rem 0 1rem;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-evenly;
-	align-items: center;
-	background-color: rgba(0, 128, 0, 0.357);
+.teller-error {
+	padding: 1rem;
+	color: aliceblue;
+	background-color: rgba(0, 0, 0, 0.357);
 	width: 80%;
 	border-radius: 10px;
 }
 
-.teller p {
+.result {
 	font-weight: 700;
 }
 
